--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -65,7 +65,7 @@
                             <li>
                                 <a routerLink="/find-rfp" class="appio-scroll">
                                     <i class="fa fa-search" aria-hidden="true"></i>
-                                    Find RFP
+                                    Find RFPs
                                 </a>
                             </li>
                             <li>
@@ -105,7 +105,7 @@
                             <li>
                                 <a routerLink="/login" class="appio-scroll">
                                     <i class="material-icons">fingerprint</i>
-                                    Log In
+                                    Sign in
                                 </a>
                             </li>
                             <li>
