--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
     <h3>RFPGurus is your essential WINNING Partner in Government RFP Bidding</h3>
-    <p><a routerlink="/contact-us" href="/contact-us" class="clr_red"><strong>ESTABLISH CONTACT</strong></a>
+    <p><a routerlink="/contact-us" href="/contact-us" class="clr_red"><strong>Establish Contact</strong></a>
       with us today. Let us know which RFP you would like us to work on your behalf? We&nbsp;will assign a team of
       specialists who work FOR YOU in readying a perfectly crafted RFP proposal for your next Government Contract.</p>
     <h3>Making your business successful in acquiring new Government RFP Contracts</h3>
@@ -55,7 +55,7 @@
         </div>
         <p class="text-left">RFPGurus is easily accessible on Web, iOS &amp; Android platforms. Download our next
           generation Apps on the platform of your choice to experience RFP Searching and Bidding like <strong>
-            NEVER BEFORE</strong>. </p>
+           Never Before</strong>. </p>
       </div>
       <div class="col-md-3 col-sm-6">
         <h4 >RFP as a Service <br>=<br> Custom Services</h4>
