--- a/src/app/residential/residential.component.html
+++ b/src/app/residential/residential.component.html
@@ -8,9 +8,9 @@
             <ng-template mat-tab-label class="col">
               <div class="holder red">
                 <div class="img-holder">
-                  <i class="material-icons">credit_card</i>
+                    <i class="fas fa-question-circle"></i>
                   <h3 class="text-center title">How RFPGurus Work?
-                      
+                     
                       </h3>
                 </div>
                 <div class="txt-holder">
@@ -18,7 +18,7 @@
                 </div>
                 <br><br>
                 <div class="btn-holder">
-                  <button class="btn btn-info btn-round" type="button" title="Answer">Answer</button>
+                  <button class="btn btn-rose " type="button" title="Answer">Answer</button>
                 </div>
               </div>
             </ng-template>
@@ -35,7 +35,7 @@
             <ng-template mat-tab-label>
               <div class="holder red">
                 <div class="img-holder">
-                  <i class="material-icons">credit_card</i>
+                    <i class="fas fa-question-circle"></i>
                   <h3 class="text-center title">Where are the Bids posted from?
                       
                       </h3>
@@ -43,7 +43,7 @@
                 <div class="txt-holder">
                 </div>
                 <div class="btn-holder">
-                  <button  class="btn btn-info btn-round" type="button"title="Answer">Answer</button>
+                  <button  class="btn btn-rose " type="button"title="Answer">Answer</button>
                 </div>
               </div>
             </ng-template>
@@ -57,7 +57,7 @@
             <ng-template mat-tab-label>
               <div class="holder red">
                 <div class="img-holder">
-                  <i class="material-icons">credit_card</i>
+                  <i class="fas fa-question-circle"></i>
                   <h3 class="text-center title">How to get subscription at RFPGurus.com?
                       
                       </h3>
@@ -65,7 +65,7 @@
                 <div class="txt-holder">
                 </div>
                 <div class="btn-holder">
-                  <button class="btn btn-info btn-round" type="button" title="Answer">Answer</button>
+                  <button class="btn btn-rose " type="button" title="Answer">Answer</button>
                 </div>
               </div>
             </ng-template>
@@ -80,7 +80,7 @@
               <ng-template mat-tab-label>
                 <div class="holder red">
                   <div class="img-holder">
-                    <i class="material-icons">credit_card</i>
+                    <i class="fas fa-question-circle"></i>
                     <h3 class="text-center title">How do I run a search?
                         
                         </h3>
@@ -89,7 +89,7 @@
                   <div class="txt-holder">
                   </div>
                   <div class="btn-holder">
-                    <button class="btn btn-info btn-round" type="button" title="Answer">Answer</button>
+                    <button class="btn btn-rose " type="button" title="Answer">Answer</button>
                   </div>
                 </div>
               </ng-template>
@@ -103,7 +103,7 @@
                 <ng-template mat-tab-label>
                   <div class="holder red">
                     <div class="img-holder">
-                      <i class="material-icons">credit_card</i>
+                      <i class="fas fa-question-circle"></i>
                       <h3 class="text-center title">How do I set-up My Package?
                           
                           </h3>
@@ -111,7 +111,7 @@
                     <div class="txt-holder">
                     </div>
                     <div class="btn-holder">
-                      <button class="btn btn-info btn-round" type="button" title="Answer">Answer</button>
+                      <button class="btn btn-rose " type="button" title="Answer">Answer</button>
                     </div>
                   </div>
                 </ng-template>
@@ -125,14 +125,14 @@
                   <ng-template mat-tab-label>
                     <div class="holder red">
                       <div class="img-holder">
-                        <i class="material-icons">credit_card</i>
+                        <i class="fas fa-question-circle"></i>
                         <h3 class="text-center title">What if I have a problem logging into my account?
                             </h3>
                       </div>
                       <div class="txt-holder">
                       </div>
                       <div class="btn-holder">
-                        <button class="btn btn-info btn-round" type="button" title="Answer">Answer</button>
+                        <button class="btn btn-rose " type="button" title="Answer">Answer</button>
                       </div>
                     </div>
                   </ng-template>
@@ -146,7 +146,7 @@
                     <ng-template mat-tab-label>
                       <div class="holder red">
                         <div class="img-holder">
-                          <i class="material-icons">credit_card</i>
+                          <i class="fas fa-question-circle"></i>
                           <h3 class="text-center title">What is the best way to log out?
                               
                               
@@ -156,7 +156,7 @@
                         <div class="txt-holder">
                         </div>
                         <div class="btn-holder">
-                          <button class="btn btn-info btn-round" type="button"title="Answer" >Answer</button>
+                          <button class="btn btn-rose " type="button"title="Answer" >Answer</button>
                         </div>
                       </div>
                     </ng-template>
@@ -164,7 +164,7 @@
                      <p>
                         To log out, click on the Log Out link at the top of the page. This will release your session.
                         </p>
-                                              <!-- <button routerLink="/pricing" class="btn btn-info btn-round">Pay Online Now</button> -->
+                                              <!-- <button routerLink="/pricing" class="btn btn-rose ">Pay Online Now</button> -->
                     </div>
                   </mat-tab>
 
