--- a/src/app/admin/Preferences/profile.component.html
+++ b/src/app/admin/Preferences/profile.component.html
@@ -1,7 +1,7 @@
 <div class="row margin-0">
     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 center-admin-form" id="display_advance">
         <div class="card">
-            <form [formGroup]="register" class="sh-signup-form-fix edit-profile sh-pref-selectlist">
+            <form [formGroup]="register" class=" edit-profile sh-pref-selectlist">
                 <div class="card-header card-header-icon" data-background-color="rose">
                     <i class="far fa-newspaper"></i>
                 </div>
