--- a/src/app/all/all-category/all-category.component.html
+++ b/src/app/all/all-category/all-category.component.html
@@ -31,7 +31,7 @@
           <div class="col-sm-4 col" *ngFor="let rfpcat of cat; let i = index">
             <a class="curser-pointer" (click)="catrfp(rfpcat.cat.category_name)"><i class="fab fa-superpowers"
                 aria-hidden="true"></i>{{rfpcat.cat.category_name}}</a>
-            <i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse"
+            <i class="caret pull-right view-more state collapsed" data-toggle="collapse"
               attr.data-target="#View{{i}}" *ngIf="rfpcat.subcat !=''"></i>
             <div attr.id="View{{i}}" class="panel-details collapse">
               <!-- <div > -->
