--- a/src/app/all/all-state/all-state.component.html
+++ b/src/app/all/all-state/all-state.component.html
@@ -52,7 +52,7 @@
         <div *ngFor="let rfpstate of state | filter:statesearch" class="col-sm-4 col-lg-4 col-md-4 col-xs-12 col">
           <a class="curser-pointer" [routerLink]="['/state']" [queryParams]="{ state: rfpstate.state}">
             <img class="sh-state-img" src="https://storage.rfpgurus.com/bplrfpgurus/{{rfpstate.icon_image}}" alt="img">
-            <p>{{rfpstate.state}}</p>
+            <p class="state-name">{{rfpstate.state}}</p>
           
           </a>
         </div>
