--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -3,15 +3,14 @@
 <div class="main-panel min_height_550px">
     <div class="main-content custom mt-10px" >
         <div class="col-sm-12">
-            <div>
-                <!-- <div class="rfp-back">
+            <!-- <div>
+                <div class="rfp-back"> 
                     <a (click)="back()"><i class="fa fa-chevron-left"></i> Back to Previous Page</a>
-                </div> -->
+                </div>
                 <h2 class="main-heading">Find RFPs</h2>
-            </div>
-            <div class="example-container mat-elevation-z8">
-                <div *ngIf="items">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-pg-container" *ngIf="search == false">
+            </div> -->
+            <div *ngIf="items">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top sh-pg-container" *ngIf="search == false">
                         <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right">
                             <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
                                 <li [ngClass]="{hide:pager.currentPage === 1}">
@@ -72,7 +71,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class=" sh-n-table sh-signup-form-fix">
+                    <div class="mg-top sh-n-table sh-signup-form-fix">
                         <table>
                             <thead>
                                 <tr>
@@ -172,6 +171,8 @@
                     </div>
                     <!-- <ng2-smart-table class="sh-table" [settings]="settings" [source]="items" (userRowSelect)="onUserRowSelect($event)" ></ng2-smart-table> -->
                 </div>
+            <div class="example-container mat-elevation-z8">
+               
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-pg-container" *ngIf="search == false">
                     <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right">
                         <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
