--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -142,9 +142,9 @@
                 <td><strong>Average Pricing / Year</strong></td>
                 <td>$ 199.99</td>
                 <td>$ 1200</td>
-                <td>$ 295</td>
-                <td>$ 270</td>
-                <td>$ 1320</td>
+                <td>$ 2200</td>
+                <td>$ 3700</td>
+                <td>$ 6500</td>
               </tr>
               <tr>
                 <td><strong>Bid Matching Artificial Intelligence (AI)</strong></td>
@@ -246,7 +246,7 @@
           <ngx-item NgxCarouselItem *ngFor="let rfp of record">
             <div class="card">
               <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 latest-rfp-div">
                   <div class="card-header card-header-text" data-background-color="purple">
                     <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}">
                       <h4 class="card-title">{{rfp.rfp_number}}</h4>
