--- a/src/app/user-sidebar/user-sidebar.component.html
+++ b/src/app/user-sidebar/user-sidebar.component.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col-sm-12">
                         <mat-form-field class="sh-sidebar-date">
-                            <input matInput placeholder="Posted Date" (click)="picker.open()" name="enterdate"
+                            <input matInput placeholder="From Posted Date" (click)="picker.open()" name="enterdate"
                                 (focus)="picker.open()" [matDatepicker]="picker" [(ngModel)]="enterdate"
                                 (ngModelChange)="onSubmit(f)">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -33,7 +33,7 @@
                     <div class="col-sm-12">
 
                         <mat-form-field class="example-full-width mat-size sh-sidebar-date">
-                            <input placeholder="Due Date" matInput (click)="picker2.open()" name="duedate"
+                            <input placeholder="To Posted Date" matInput (click)="picker2.open()" name="duedate"
                                 (focus)="picker2.open()" [matDatepicker]="picker2" [(ngModel)]="duedate"
                                 (ngModelChange)="onSubmit(f)">
                             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -183,7 +183,7 @@
                     [queryParams]="{ cat: rfpcat?.cat?.category_name}">
                     {{rfpcat?.cat?.category_name | titlecase}}
                 </a>
-                <i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse"
+                <i class="caret pull-right view-more state collapsed" data-toggle="collapse"
                     attr.data-target="#View{{i}}" *ngIf="rfpcat.subcat !=''"></i>
                 <div>
                     <div attr.id="View{{i}}" class="panel-details side collapse">
