--- a/src/app/registered/registered.component.html
+++ b/src/app/registered/registered.component.html
@@ -117,16 +117,11 @@
                 </div>
 
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                  <div class="form-group label-floating" [ngClass]="displayFieldCss(register, 'phone')">
-                    <!-- <mat-form-field> -->
-                     
+                  <div class="form-group label-floating" [ngClass]="displayFieldCss(register, 'phone')">        
+                    <!-- <label>
+                      Phone No
+                    </label>              -->
                        <int-phone-prefix [(ngModel)]="phone" class="phonee"  formControlName="phone" placeholder="Phone No" required></int-phone-prefix>
-                      <!-- <input matInput [textMask]="{mask: phoneMask}" type="text" id="phone" formControlName="phone" placeholder="Phone #" required
-                      /> -->
-                      <!-- <mat-error *ngIf="register.controls.phone.value == ''">
-                        <strong>Phone# cannot be empty</strong>
-                      </mat-error> -->
-                    <!-- </mat-form-field> -->
                   </div>
                 </div>
 
