--- a/src/app/all/all-rfps/all-rfps.component.html
+++ b/src/app/all/all-rfps/all-rfps.component.html
@@ -17,7 +17,66 @@
               <span *ngIf="item">No of RFPs: <b> {{item | number}}</b></span>
             </div>
           </div>
-          <div class="products-area sh-products-area">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-pg-container header"  id="myHeader">
+
+            <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right">
+              <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
+                <li [ngClass]="{hide:pager.currentPage === 1}">
+                  <a (click)="setPage(1)" class="view-1s" class="btn btn-fill">
+                    <i class="fa fa-angle-double-left"></i>
+                  </a>
+                </li>
+                <li [ngClass]="{hide:pager.currentPage === 1}">
+                  <a (click)="setPage(pager.currentPage - 1)" class="view-1s" class="btn btn-fill">
+                    <i class="fas fa-angle-left"></i>
+                  </a>
+                </li>
+                <li [ngClass]="{hide:pager.currentPage <= 30}">
+                  <a (click)="setPage(pager.currentPage - 30)">...</a>
+                </li>
+                <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+                  <a (click)="setPage(page)" class="view-plan-details">{{page | number}}</a>
+                </li>
+                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}" *ngIf="(pager.startPage  + 3) <= pager.totalPages">
+                  <a (click)="setPage(pager.currentPage + 3)">...</a>
+                </li>
+                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}"> <a>Of</a></li>
+                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                  <a (click)="setPage(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages |
+                    number}}</a>
+                </li>
+                <li *ngIf="pager.currentPage === pager.totalPages"> <a>Of</a></li>
+                <li *ngIf="pager.currentPage === pager.totalPages">
+                  <a (click)="setPage(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages |
+                    number}}</a>
+                </li>
+                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                  <a (click)="setPage(pager.currentPage + 1)" class="view-plan-details" class="btn bd-color" type="Next">
+                    <i class="fas fa-angle-right top-set"></i>
+                  </a>
+                </li>
+                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                  <a (click)="setPage(pager.totalPages)" class="view-plan-details" class="btn bd-color" type="Next">
+                    <i class="fa fa-angle-double-right"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-3 col-xs-12 prod-select-list sec-list sh-select-list" *ngIf="pager.pages && pager.pages.length">
+              <label class="product-label">Items per page:
+              </label>
+              <mat-form-field>
+                <mat-select class="width-sec" placeholder="" selected="10" (change)="page(pageSize)" value="pageSize"
+                  required [(ngModel)]="pageSize" name="pageSize">
+                  <mat-option value="10" selected="true">10</mat-option>
+                  <mat-option value="20">20 </mat-option>
+                  <mat-option value="35">35</mat-option>
+                  <mat-option value="50">50</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="products-area sh-products-area " >
             <div *ngFor="let rfp of record;let i=index" class="card">
               <div class="row">
                 <div class="col-sm-12">
@@ -49,7 +108,7 @@
                         rfp.state}}</a>
                     </h5>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 plan-detail" *ngIf="!subscribe">
-                      <h5><i class="fas fa-info dscrption-icon"></i> Description:
+                      <h5><i class="fas fa-info dscrption-icon"></i>Description:
                         <a (click)="memberonly()" class="memberOnly"><i class="fas fa-lock lock-icon"></i>Member Only</a>
                       </h5>
                       <h5><i class="fas fa-file-alt"></i>Bid Documents:
